--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "socket.io": "^4.5.1",
     "uuid": "^8.3.2"
