--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.49",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
+    "socket.io-client": "^4.5.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.8",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-lottie": "^1.2.6",
+    "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^8.3.4",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
